@@ -13,6 +13,7 @@ Version 1.0.xxx (May xxth 2013)
 - Fixed: Light/Switch type 'Door Lock' on Lights tab showed initially a wrong icon for the 'Open' state
 - Fixed: Settings Email, now possible to send a test email without username/password
 - Implemented: Option to enable/disable menus from application settings
+- Implemented: Option to request list of all timers via JSON (gettimerlist)
 
 Version 1.0.607 (May 11th 2013)
 - Changed: Rego6XX Type setting moved to the hardware settings in the same way as RFXtrx setup is done
